# BTSParking

./: FeatureList.md  LICENSE  README.md  docker-compose.yaml  openapi.yaml  populate.sql  prometheus.yml  promtail.yml  sonar-project.properties
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 093df057a11c_create_roads_for_zones_add_hourly_rate_.py  10a9871dcfd1_fourth_migration.py  14a2bc7ce5fa_.py  2a21cc79bb10_add_cookie_expire_time.py  33a7cd91dfa8_.py  33dcb5bad912_third_migration.py  3eb19c051cf1_.py  46e932d37907_.py  46f67047616c_db_population.py  559f3fa62d9b_second_migration.py  6c6b0bc618ee_revert_zone_coordinates.py  6d7c9b9550ea_.py  71c5bbf05ef4_.py  7a5f0b3250bf_.py  9ce0301412ad_first_migration.py  a495ca74997f_fix_token_length.py  aca8fb83c0ec_.py  b610a95d6cd9_first_migration.py  b8d357b162b3_add_booked_from_booked_until.py  b8e94785f6bd_second_migration.py  bfa6bf3921de_.py  cc586c0d96d8_.py  e7bfb0d5db1a_db_population.py  f5279e3278e4_.py
backend/app/: app.py  db.py  examples.py  exceptions.py  logs.py  main.py  models.py  responses.py  schema.py  utils.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: authorization.py  cars.py  maps.py  (+2 more)
backend/app/core/: security.py
backend/app/models/: booking.py  car.py  road.py  space.py  user.py  zone.py
backend/app/routers/: api.py  authorization.py  cars.py  zones.py
backend/app/schemas/: car.py  logs.py  user.py
backend/scripts/: lint.sh
(+161 files in other folders)
